--- a/angular-src/package.json
+++ b/angular-src/package.json
@@ -31,6 +31,7 @@
     "circular-json": "^0.5.4",
     "core-js": "^2.4.1",
     "file-saver": "^1.3.8",
+    "lodash": "^4.17.11",
     "mydatepicker": "^2.6.1",
     "ng4-loading-spinner": "^1.1.1",
     "ngx-toggle-switch": "^2.0.5",
